# luminance-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NEXT.md  README.md  rustfmt.toml
examples/common/: Cargo.toml  README.md
examples/common/src/: attributeless.rs  cubemap-viewer-vs.glsl  displacement-vs.glsl  displacement_map.rs  dynamic_uniform_interface.rs  env-mapping-fs.glsl  env-mapping-vs.glsl  funtest_360_manually_drop_framebuffer.rs  funtest_483_indices_mut_corruption.rs  funtest_flatten_slice.rs  funtest_gl33_f64_uniform.rs  funtest_pixel_array_encoding.rs  funtest_scissor_test.rs  funtest_tess_no_data.rs  hello-world-glutin.rs  hello_world.rs  interactive_triangle.rs  lib.rs  mrt.rs  multi-fs.glsl  offscreen.rs  polymorphic_hello_world.rs  query_info.rs  query_texture_texels.rs  render_state.rs  shader-data-2d-vs.glsl  shader_data.rs  shader_uniform_adapt.rs  shader_uniforms.rs  shared.rs  skybox.rs  sliced_tess.rs  stencil.rs  texture.rs  texture_resize.rs  vertex_instancing.rs
examples/desktop/: Cargo.toml  README.md
examples/desktop/src/: main.rs  platform.rs
examples/web/: Cargo.toml  README.md  index.js  webpack.config.js
examples/web/src/: lib.rs  platform.rs
integration-tests/desktop/: Cargo.toml
integration-tests/desktop/fixtures/: Cargo.toml
integration-tests/desktop/gl33-f64-uniform/: Cargo.toml
integration-tests/desktop/src/: gl33_f64_uniform.rs  main.rs  manually_drop_framebuffer.rs  scissor.rs  segfault_drop_surface_surviving_gpu_resources.rs  tess_no_data.rs
integration-tests/web/: Cargo.toml  index.js
integration-tests/web/src/: flatten_slice.rs  fs.glsl  lib.rs  pixel_array_encoding.rs  vs.glsl
luminance/: CHANGELOG.md  Cargo.toml  README.md
luminance-derive/: CHANGELOG.md  Cargo.toml  README.md
luminance-derive/src/: attrib.rs  lib.rs  semantics.rs  uniform_interface.rs  vertex.rs  vertex_attrib_sem.rs
luminance-derive/tests/: integration.rs  uniform_interface.rs  vertex.rs
luminance-examples/: Cargo.toml  README.md
luminance-examples-web/: Cargo.toml  README.md  index.js  package.json
luminance-examples-web/src/: lib.rs
luminance-examples/src/: adapt-vs.glsl  attributeless-vs.glsl  attributeless.rs  copy-multi-fs.glsl  copy-vs.glsl  cubemap-viewer-fs.glsl  cubemap-viewer-vs.glsl  displacement-map.rs  dynamic-uniform-interface.rs  env-mapping-fs.glsl  env-mapping-vs.glsl  hello-world-glutin.rs  hello-world.rs  interactive-triangle.rs  multi-fs.glsl  multiple-targets.rs  offscreen.rs  query-info.rs  query-texture-texels.rs  render-state.rs  shader-uniforms-adapt.rs  shader-uniforms.rs  skybox.rs  sliced-tess.rs  texture.rs  texture_resize.rs  vertex-instancing.rs
luminance-examples/src/common/: mod.rs
luminance-front/: CHANGELOG.md  Cargo.toml  README.md
luminance-front/src/: buffer.rs  context.rs  framebuffer.rs  lib.rs  pipeline.rs  query.rs  render_gate.rs  shader.rs  shading_gate.rs  tess.rs  tess_gate.rs  texture.rs
luminance-front/src/shader/: types.rs
luminance-gl/: CHANGELOG.md  Cargo.toml  README.md
luminance-gl/src/: gl33.rs  lib.rs
luminance-gl/src/gl33/: buffer.rs  depth_stencil.rs  depth_test.rs  framebuffer.rs  mod.rs  pipeline.rs  pixel.rs  query.rs  shader.rs  state.rs  tess.rs  tessellation.rs  texture.rs  vertex_restart.rs
luminance-glfw/: CHANGELOG.md  Cargo.toml  README.md
luminance-glfw/src/: lib.rs  surface.rs
luminance-glutin/: CHANGELOG.md  Cargo.toml  README.md
luminance-glutin/src/: lib.rs
luminance-sdl2/: CHANGELOG.md  Cargo.toml  README.md
luminance-sdl2/src/: lib.rs
luminance-std140/: CHANGELOG.md  Cargo.toml  README.md
luminance-std140/src/: lib.rs
luminance-web-sys/: CHANGELOG.md  Cargo.toml  README.md
luminance-web-sys/src/: lib.rs
luminance-webgl/: CHANGELOG.md  Cargo.toml  LICENSE  build.rs
luminance-webgl/src/: lib.rs  slice.rs  webgl2.rs
luminance-webgl/src/webgl2/: array_buffer.rs  buffer.rs  framebuffer.rs  pipeline.rs  pixel.rs  query.rs  shader.rs  state.rs  tess.rs  texture.rs
luminance-windowing/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
luminance-windowing/src/: lib.rs
luminance/examples/: 01-hello-world-glutin.rs  01-hello-world.rs  02-render-state.rs  03-sliced-tess.rs  04-shader-uniforms.rs  05-attributeless.rs  06-texture.rs  07-offscreen.rs  08-shader-uniforms-adapt.rs  09-dynamic-uniform-interface.rs  10-vertex-instancing.rs  11-query-texture-texels.rs  12-displacement-map.rs  README.md  copy-fs.glsl  simple-fs-unsigned.glsl  texture-fs.glsl
luminance/examples/01-hello-world/: Cargo.toml  README.md
luminance/examples/02-render-state/: Cargo.toml
luminance/examples/03-sliced-tess/: Cargo.toml  README.md
luminance/examples/04-shader-uniforms/: Cargo.toml  README.md
luminance/examples/05-attributeless/: Cargo.toml
luminance/examples/06-texture/: Cargo.toml
luminance/examples/07-offscreen/: Cargo.toml
luminance/examples/08-shader-uniforms-adapt/: Cargo.toml  README.md
luminance/examples/09-dynamic-uniform-interface/: Cargo.toml  README.md
luminance/examples/10-vertex-instancing/: Cargo.toml  README.md
luminance/examples/12-displacement-map-resources/: displacement-map-vs.glsl
luminance/examples/common/: mod.rs
luminance/src/: api.rs  backend.rs  blending.rs  buffer.rs  chain.rs  context.rs  deinterleave.rs  depth_stencil.rs  depth_test.rs  face_culling.rs  framebuffer.rs  gtup.rs  lib.rs  linear.rs  metagl.rs  pipeline.rs  pixel.rs  query.rs  render_gate.rs  render_state.rs  scissor.rs  shader.rs  shading_gate.rs  state.rs  tess.rs  tess_gate.rs  tessellation.rs  texture.rs  vertex.rs  vertex_restart.rs
luminance/src/api/: buffer.rs  color_slot.rs  depth_slot.rs  framebuffer.rs  pipeline.rs  render_gate.rs  shader.rs  shading_gate.rs  tess.rs  tess_gate.rs  texture.rs
luminance/src/backend/: buffer.rs  color_slot.rs  depth_slot.rs  depth_stencil_slot.rs  framebuffer.rs  gl.rs  pipeline.rs  query.rs  render_gate.rs  shader.rs  shader_stage.rs  shading_gate.rs  tess.rs  tess_gate.rs  texture.rs
luminance/src/shader/: mod.rs  (+5 more)
luminance/tests/: uniform_interface.rs  vertex.rs
(+92 files in other folders)
