[workspace]

members = [
  "integration-tests/desktop/gl33-f64-uniform",
  "luminance",
  "luminance-derive",
  "luminance-examples",
  "luminance-examples-web",
  "luminance-front",
  "luminance-gl",
  "luminance-glfw",
  "luminance-glutin",
  "luminance-sdl2",
  "luminance-webgl",
  "luminance-web-sys",
  "luminance-windowing",
]

[patch.crates-io]
luminance = { path = "./luminance" }
luminance-derive = { path = "./luminance-derive" }
luminance-examples = { path = "./luminance-examples" }
luminance-examples-web = { path = "./luminance-examples-web" }
luminance-front = { path = "./luminance-front" }
luminance-gl = { path = "./luminance-gl" }
luminance-glfw = { path = "./luminance-glfw" }
luminance-glutin = { path = "./luminance-glutin" }
luminance-sdl2 = { path = "./luminance-sdl2" }
luminance-webgl = { path = "./luminance-webgl" }
luminance-web-sys = { path = "./luminance-web-sys" }
luminance-windowing = { path = "./luminance-windowing" }
