[package]
name = "luminance-derive"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Procedural macros for deriving luminancetraits"
keywords = ["stateless", "type-safe", "graphics", "luminance", "derive"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-derive"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
syn = "0.15"
