[package]
name = "luminance-derive"
version = "0.5.3"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Procedural macros for deriving luminance traits"
keywords = ["stateless", "type-safe", "graphics", "luminance", "derive"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-derive"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }

[dev-dependencies]
luminance = ">= 0.37, < 0.40"
