[package]
name = "luminance-examples"
version = "0.1.1"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2018"

# [[bin]]
# name = "attributeless"
# path = "src/attributeless.rs"
#
# [[bin]]
# name = "displacement-map"
# path = "src/displacement-map.rs"
#
# [[bin]]
# name = "dynamic-uniform-interface"
# path = "src/dynamic-uniform-interface.rs"
#
[[bin]]
name = "hello-world"
path = "src/hello-world.rs"
#
# [[bin]]
# name = "hello-world-glutin"
# path = "src/hello-world-glutin.rs"
#
# [[bin]]
# name = "offscreen"
# path = "src/offscreen.rs"
#
# [[bin]]
# name = "query-texture-texels"
# path = "src/query-texture-texels.rs"
#
# [[bin]]
# name = "render-state"
# path = "src/render-state.rs"
#
# [[bin]]
# name = "shader-uniforms-adapt"
# path = "src/shader-uniforms-adapt.rs"
#
# [[bin]]
# name = "shader-uniforms"
# path = "src/shader-uniforms.rs"
#
# [[bin]]
# name = "sliced-tess"
# path = "src/sliced-tess.rs"
#
# [[bin]]
# name = "texture"
# path = "src/texture.rs"
#
# [[bin]]
# name = "vertex-instancing"
# path = "src/vertex-instancing.rs"

[dependencies]
#image = "0.22"
luminance = "0.39"
luminance-derive = "0.5"
luminance-glfw = "0.12"
#luminance-glutin = "0.9"
luminance-windowing = "0.8"
glfw = "0.36"
#glutin = "0.23"
