[package]
name = "luminance-front"
version = "0.4.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "luminance re-exported with a backend picked at compile-time"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-front"
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["autoselect"]
autoselect = ["gl33", "webgl2"] # automatically pick the right backend depending on the compilation target
gl33 = ["luminance-gl"] # OpenGL 3.3 backend
gl33-GL_ARB_gpu_shader_fp64 = ["luminance-gl/GL_ARB_gpu_shader_fp64"] # 64-bit support
webgl2 = ["luminance-webgl"] # WebGL2 backend

[dependencies]
luminance = { version = "0.44", path = "../luminance" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
luminance-gl = { version = "0.17", path = "../luminance-gl", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
luminance-webgl = { version = "0.4", path = "../luminance-webgl", optional = true }
