[package]
name = "luminance-gl"
version = "0.9.0"
license = "BSD-3-Clause"
authors = ["Dimitri 'phaazon' Sabadie <dimitri.sabadie@gmail.com>"]
description = "OpenGL backends for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "opengl"]

homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-gl"

[features]
default = ["gl33"]
gl33 = []

[dependencies]
gl = "0.5.2"
luminance = { version = "0.12.0", path = "../luminance" }
