[package]
name = "luminance-gl"
version = "1.0.0-rc.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "OpenGL backends for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "opengl"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-gl"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["gl33"]
gl33 = []

[dependencies]
gl = "0.14"
luminance = "1.0.0-rc.1"
