[package]
name = "luminance-glfw"
version = "0.14.4"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "GLFW support for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "glfw"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-glfw"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
gl = "0.14"
glfw = { version = ">=0.39, <0.42", default-features = false }
luminance = ">=0.42, <0.44"
luminance-gl = ">=0.15, <0.17"
luminance-windowing = "0.9"

[features]
default = ["glfw-sys"]
all = ["glfw-sys"]
glfw-sys = ["glfw/glfw-sys"]
log-errors = []
