[package]
name = "luminance-glutin"
version = "1.0.0-rc.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "GLFW support for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "glfw"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-glutin"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
gl = "0.14"
glutin = { version = "0.23", default-features = false }
luminance = "1.0.0-rc.1"
luminance-gl = "1.0.0-rc.1"
luminance-windowing = "1.0.0-rc.1"

[features]
serde = ["glutin/serde"]
