[package]
name = "luminance-glutin"
version = "0.12.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Glutin support for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "glutin"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-glutin"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
gl = "0.14"
glutin = { version = "0.27", default-features = false }
luminance = { version = "0.44", path = "../luminance" }
luminance-gl = { version = "0.17", path = "../luminance-gl" }

[features]
default = ["x11", "wayland"]
serde = ["glutin/serde"]
x11 = ["glutin/x11"]
wayland = ["glutin/wayland"]
