[package]
name = "luminance-sdl2"
version = "0.3.0"
license = "BSD-3-Clause"
authors = [
  "Dimitri Sabadie <dimitri.sabadie@gmail.com>",
  "Joel Nordström <e.joel.nordstrom@gmail.com>"
]
description = "SDL2 support for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "sdl"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-sdl2"
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["bundled"]
bundled = ["sdl2/bundled"]

[dependencies]
gl = "0.14"
luminance = { version = "0.44", path = "../luminance" }
luminance-gl = { version = "0.17", path = "../luminance-gl" }
sdl2 = "0.34.3"
