[package]
name = "luminance-std140"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Std140 types and trait for OpenGL-based luminance backends"
keywords = ["stateless", "type-safe", "graphics", "luminance", "opengl", "std140"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-std140"
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
luminance = { version = "0.44", path = "../luminance" }
