[package]
name = "luminance-web-sys"
version = "0.2.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "web-sys luminance platform"
keywords = ["stateless", "type-safe", "graphics", "luminance", "web-sys"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-web-sys"
readme = "README.md"
edition = "2018"

[dependencies]
luminance = ">=0.40, < 0.43"
luminance-webgl = "0.2"
luminance-windowing = "0.9"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.40"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "Window",
]
