[package]
name = "luminance-webgl"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "WebGL backend for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "webgl"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-webgl"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
luminance = "0.40"
serde = "1"
serde_derive = "1"
stdweb = "0.4.20"
stdweb-derive = "0.5.3"
wasm-bindgen = "0.2.60"
webgl_generator = "0.2"

[build-dependencies]
webgl_generator = "0.2"