[package]
name = "luminance-webgl"
version = "0.1.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "WebGL backend for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "webgl"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-webgl"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
luminance = ">=0.40, < 0.42"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.60"
js-sys = "0.3.40"

[dependencies.web-sys]
version = "0.3.37"
features = [
  "WebGl2RenderingContext",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlRenderbuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
]
