[package]
name = "luminance-windowing"
version = "0.10.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Common windowing code for luminance; DEPRECATED!"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-windowing"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[dependencies]
luminance = { version = "0.44", path = "../luminance" }
