[package]
name = "luminance"
version = "0.30.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "phaazon/luminance-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "phaazon/luminance-rs" }
is-it-maintained-open-issues = { repository = "phaazon/luminance-rs" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["gl"]

[dependencies.gl]
version = "0.10"
optional = true
