[package]
name = "luminance"
version = "0.34.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["gl"]

[dependencies.gl]
version = "0.13"
optional = true

[dev-dependencies]
image = "0.22"
luminance-derive = "0.2"
luminance-glfw = "0.8"
luminance-glutin = "0.3"
