[package]
name = "luminance"
version = "0.39.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
gl = "0.14"
