[package]
name = "luminance-examples"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2018"

[features]
funtest = []
funtest-gl33-f64-uniform = ["luminance-front/gl33-GL_ARB_gpu_shader_fp64"]

[dependencies]
cgmath = "0.18"
env_logger = "0.8.1"
log = "0.4.11"
luminance = "0.44"
luminance-front = "0.4"

[dependencies.image]
version = "0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]
