[package]
name = "luminance-examples-web"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
env_logger = "0.8.1"
image = "0.23"
log = "0.4.11"
luminance = "0.44"
luminance-examples = { version = "0.1", path = "../common" }
luminance-front = "0.4"
luminance-web-sys = "0.3"
luminance-windowing = "0.10"
wasm-bindgen = "0.2.63"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.44"
features = [
  "Window",
  "console",
]
