[package]
name = "luminance-examples-web"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
funtest = ["luminance-examples/funtest"]

[dependencies]
console_error_panic_hook = "0.1.6"
env_logger = "0.9.0"
log = "0.4.11"
luminance = { version = "0.44", path = "../../luminance" }
luminance-examples = { version = "0.1", path = "../common" }
luminance-front = { version = "0.4", path = "../../luminance-front" }
luminance-web-sys = { version = "0.3", path = "../../luminance-web-sys" }
luminance-windowing = { version = "0.10", path = "../../luminance-windowing" }
wasm-bindgen = "0.2.63"
wasm-logger = "0.2"

[dependencies.image]
version = "0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

[dependencies.web-sys]
version = "0.3.44"
features = [
  "Window",
  "console",
]
