[package]
name = "desktop-integ-tests"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2018"

[[bin]]
name = "desktop-integ-tests"
path = "src/main.rs"

[dependencies]
colored = "2"
glfw = "0.41.0"
luminance = "0.43"
luminance-front = "0.3"
luminance-gl = { version = "0.16", features = ["GL_ARB_gpu_shader_fp64"] }
luminance-glfw = "0.14.0"
luminance-windowing = "0.9.1"
