[package]
name = "web-integ-tests"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.18"
colored = "2"
luminance = "0.43"
luminance-front = "0.3"
luminance-web-sys = "0.2.2"
web-sys = { version = "0.3.45", features = ["console"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
