[package]
name = "gl33-f64-uniform"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2018"

[[bin]]
name = "integ-gl33-f64-uniform"
path = "src/main.rs"

[dependencies]
glfw = "0.39.1"
luminance = "0.41"
luminance-derive = "0.6.1"
luminance-front = "0.2"
luminance-gl = { version = "0.14.1", features = ["GL_ARB_gpu_shader_fp64"] }
luminance-glfw = "0.13.1"
luminance-windowing = "0.9.1"
