[package]
name = "texture"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]

[dependencies]
image = "0.19"
luminance = { version = "0.30", path = "../.." }
luminance-derive = { version = "0.1", path = "../../../luminance-derive" }
luminance-glfw = { version = "0.5", path = "../../../luminance-glfw" }
